fix: dialog loading on small viewports

--- a/src/components/Dialog/DialogWrapper/styles.scss
+++ b/src/components/Dialog/DialogWrapper/styles.scss
@@ -28,7 +28,6 @@
   @media (max-width: 640px) {
     width: 100%;
     min-width: 100%;
-    height: 100%;
     border-radius: 0;
     max-width: 100%;
   }
