--- a/src/components/Dialog/Loading/styles.scss
+++ b/src/components/Dialog/Loading/styles.scss
@@ -9,6 +9,7 @@
 
 .container {
   display: flex;
+  align-items: flex-end;
   position: absolute;
   top: 0;
   right: 0;
@@ -16,6 +17,14 @@
   left: 0;
   background-color: rgba(0,74,128,0.4);
   z-index: 1;
+}
+
+.viewportCenterer {
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .wrapper {
